styles/mediaQuery.css
/* ... */
@media (max-width: 850px) {
    header {
        padding-left: 60px;
        padding-right: 60px;
    }

    /* ---heroSection--- */
    .ownNameHeader {
        gap: 20px;
    }

    .ownNameHeader div p:nth-child(1) {
        font-size: 60px;
    }

    .ownNameHeader div p:nth-child(2) {
        font-size: 30px;
    }

    .ownNameHeader .iam {
        font-size: 40px;
        padding: 0px;
        padding-bottom: 8px;
        top: 6px;
    }

    .purpleShadowHeroSection {
        left: -30%;
    }
}

@media (max-width: 700px) {
    h2 {
        font-size: 70px;
    }

    .arkDesignLogo {
        width: 110px;
    }

    section {
        padding-left: 40px;
        padding-right: 40px;
    }

    /* ---heroSection--- */

    .ownNameHeader div p:nth-child(1) {
        font-size: 50px;
    }

    .ownNameHeader div p:nth-child(2) {
        font-size: 25px;
    }

    .ownNameHeader .iam {
        font-size: 35px;
        top: 4px;
    }

    .purpleShadowHeroSection {
        width: 400px;
    }

    .greenShadowHeroSection {
        width: 400px;
        top: 32%;
    }

    .lineOne {
        width: 150px;
    }

    /* ---aboutSection--- */

    .aboutCharacter {
        width: 450px;
    }

    .aboutWave {
        bottom: -11%;
    }

    /* ---portfolioSection--- */

    .portfolioHeading::before {
        left: -41%;
    }
}

@media (max-width: 650px) {
    h2 {
        font-size: 60px;
    }

    p {
        font-size: 14px;
    }

    section {
        padding-left: 30px;
        padding-right: 30px;
    }

    /* ---aboutSection--- */

    .aboutCharacter {
        width: 400px;
    }

    /* ---skillsSection--- */

    .skillsSection {
        padding-top: 40px;
    }

    /* --------footer --------- */

    .footer {
        padding: 45px 25px;
    }
}

@media (max-width: 560px) {
    header {
        padding-left: 40px;
        padding-right: 40px;
    }

    /* ---heroSection--- */
    .ownNameHeader {
        padding: 0 8px 0 0;
    }

    .ownNameHeader div p:nth-child(1) {
        font-size: 40px;
    }

    .ownNameHeader div p:nth-child(2) {
        font-size: 15px;
    }

    .ownNameHeader .iam {
        font-size: 25px;
        padding: 0px;
    }

    .purpleShadowHeroSection {
        width: 400px;
        left: -44%;
    }

    .greenShadowHeroSection {
        width: 400px;
        top: 32%;
    }

    .lineOne {
        width: 100px;
    }

    /* --------aboutSection-------- */

    .aboutFeatures {
        width: 400px;
    }

    .aboutWave {
        bottom: -10%;
    }

    /* --------skillsSection-------- */

    .iconsDiv {
        gap: 60px;
    }

    /* --------contactSection-------- */

    .contactHeadingRow::after {
        right: -78%;
    }

    /* ---------footer ----------- */

    .footerLimiter {
        flex-direction: column;
        gap: 25px;
    }

    .d_noneMedia {
        display: none;
    }

    .d_Flex_Media {
        display: flex;
    }
}

@media (max-width: 470px) {

    h2 {
        font-size: 45px;
    }

    .arkDesignLogo {
        width: 80px;
    }

    section {
        padding-left: 25px;
        padding-right: 25px;
    }

    /* ---heroSection--- */

    .ownNameHeader div p:nth-child(1) {
        font-size: 32px;
    }

    .ownNameHeader div p:nth-child(2) {
        font-size: 12px;
    }

    .ownNameHeader .iam {
        font-size: 20px;
        padding: 0px;
    }

    .purpleShadowHeroSection {
        width: 350px;
    }

    .greenShadowHeroSection {
        width: 350px;
    }

    .lineOne {
        width: 70px;
    }

    /* --------aboutSection-------- */

    .aboutFeatures {
        width: 330px;
    }

    .aboutWave {
        bottom: -7%;
    }

    /* --------skillsSection-------- */

    .skillsContent>p {
        width: 330px;
    }

    .iconsDiv {
        gap: 50px;
    }

    .skillIcon {
        width: 60px;
        height: 60px;
    }

    /* --------contactSection-------- */

    .contactHeadingRow::after {
        right: -85%;
    }

    /* --------impressumSection-------- */
    .impressumSection {
        height: calc(100vh - 230px);
    }
}
/* ... */

